[project]
name = "hrm-text-inference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blobfile==3.0.0",
    "build>=1.5.0",
    "compressed-tensors>=0.15.0.1",
    "datasets>=5.0.0",
    "einops>=0.8.2",
    "fastapi>=0.136.3",
    "hf-transfer>=0.1.9",
    "huggingface-hub>=0.36.2",
    "interegular>=0.3.3",
    "llguidance>=0.7.11,<0.8.0",
    "loguru>=0.7.3",
    "modelscope>=1.37.1",
    "msgspec>=0.21.1",
    "ninja>=1.13.0",
    "openai==1.99.1",
    "openai-harmony==0.0.4",
    "orjson>=3.11.9",
    "outlines==0.1.11",
    "packaging>=26.2",
    "partial-json-parser>=0.2.1.1.post7",
    "pillow>=12.2.0",
    "prometheus-client>=0.20.0",
    "psutil>=7.2.2",
    "pybase64>=1.4.3",
    "pydantic>=2.13.4",
    "pylatexenc>=2.10",
    "pynvml>=13.0.1",
    "python-multipart>=0.0.32",
    "pyzmq>=25.1.2",
    "rich>=15.0.0",
    "scipy>=1.17.1",
    "sentencepiece>=0.2.1",
    "sgl-kernel>=0.3.21",
    "sglang>=0.5.2",
    "soundfile==0.13.1",
    "tiktoken>=0.13.0",
    "timm==1.0.16",
    "torch==2.4.1",
    "torchvision==0.19.1",
    "transformers>=5.9.0",
    "uvicorn>=0.49.0",
    "uvloop>=0.22.1",
    "zmq>=0.0.0",
]
